@@ -5,6 +5,7 @@ import {
   loadAccountsFromFileSync,
   mkAccounts
 } from "./lib/account";
+import { algodCredentialsFromEnv, KMDCredentialsFromEnv } from "./lib/credentials";
 import { balanceOf, printAssets } from "./lib/status";
 import { transferASALsig, transferAsset, transferMicroAlgos, transferMicroAlgosLsig } from "./lib/tx";
 import { ASC1Mode } from "./types";
@@ -21,5 +22,7 @@ export {
   printAssets,
   transferASALsig,
   transferMicroAlgosLsig,
+  algodCredentialsFromEnv,
+  KMDCredentialsFromEnv,
   ASC1Mode
 };
