@@ -1,0 +1,1 @@
+algod_token_using_method2
